--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,21 +3,40 @@ name: Portfolio Deployment
 on:
   push:
     branches:
-    - main
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
 
-    - name: Deploy static site to S3 bucket
-      run: aws s3 sync . s3://tws-portfolio-rout --delete
+      - name: Configure bucket for static website hosting
+        run: |
+          aws s3 website s3://tws-junoon/ --index-document index.html --error-document error.html
+
+      - name: Set bucket policy for public read
+        run: |
+          aws s3api put-bucket-policy --bucket tws-junoon --policy '{
+            "Version": "2012-10-17",
+            "Statement": [
+              {
+                "Sid": "PublicReadGetObject",
+                "Effect": "Allow",
+                "Principal": "*",
+                "Action": "s3:GetObject",
+                "Resource": "arn:aws:s3:::tws-junoon/*"
+              }
+            ]
+          }'
+
+      - name: Deploy static site to S3 bucket
+        run: aws s3 sync . s3://tws-junoon --delete
